syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tech_thrive_catalyst.grpc_server.user";
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc AddUser (AddUserRequest) returns (UserResponse);
}

message UserRequest {
  string id = 1;
}

message AddUserRequest {
  string name = 1;
  string email = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}